fullSandbox11072023/force-app/main/default/objects/Influence_Tracker__c/Influence_Tracker__c.object-meta.xml
<CustomObject>
    <label>Influence Tracker</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>Influence Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Influence Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>