fullSandbox11072023/force-app/main/default/objects/Influence_Tracker__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Failed Email</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>No Contact Record</fullName>
            </value>
            <value>
                <fullName>No Influence Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>