fullSandbox11072023/force-app/main/default/objects/Influence_Tracker__c/fields/Influence__c.field-meta.xml
<CustomField>
    <fullName>Influence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Influence</label>
    <referenceTo>Influence__c</referenceTo>
    <relationshipLabel>Influence Trackers</relationshipLabel>
    <relationshipName>Influence_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>