fullSandbox11072023/force-app/main/default/objects/Influence_Tracker__c/fields/Influence_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Influence_Snapshot__c</fullName>
    <label>Influence Snapshot</label>
    <referenceTo>Influence_Parent__c</referenceTo>
    <relationshipLabel>Influence Trackers</relationshipLabel>
    <relationshipName>Influence_Trackers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>